feat: add transfer model, handlers, routes and swagger; populate member codes
